<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="cross">x</string>
    <string name="backslash">/</string>
    <string name="AllClear">AC</string>
    <string name="Clear">C</string>
    <string name="equal">=</string>
    <string name="b1">(</string>
    <string name="b2">)</string>
</resources>
